[gd_scene load_steps=5 format=3 uid="uid://c4g6jg0gt6hbr"]

[ext_resource type="Script" uid="uid://dvb1nbi7vsqn6" path="res://tscns/战斗UI.gd" id="1_0x8k9"]
[ext_resource type="PackedScene" uid="uid://ch5ft504adcxv" path="res://tscns/组件/人员战斗信息组件.tscn" id="2_3x4k5"]
[ext_resource type="PackedScene" uid="uid://q4dsd2o5ecm7" path="res://tscns/组件/装备带tips.tscn" id="3_mhaon"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mhaon"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.103743516, 0.103743546, 0.10374347, 0.50980395)

[node name="战斗UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0x8k9")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TopContainer" type="HBoxContainer" parent="HBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerTeamPanel" type="PanelContainer" parent="HBoxContainer/MainContainer/TopContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerTeamList" type="GridContainer" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="人员战斗信息组件" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件2" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件3" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件4" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件5" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件6" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件7" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件8" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件9" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件10" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件11" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件12" parent="HBoxContainer/MainContainer/TopContainer/PlayerTeamPanel/PlayerTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="Spacer" type="Control" parent="HBoxContainer/MainContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EnemyTeamPanel" type="PanelContainer" parent="HBoxContainer/MainContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EnemyTeamList" type="GridContainer" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
columns = 3

[node name="人员战斗信息组件2" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件3" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件4" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件5" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件6" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件7" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件8" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件9" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件10" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件11" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件12" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="人员战斗信息组件" parent="HBoxContainer/MainContainer/TopContainer/EnemyTeamPanel/EnemyTeamList" instance=ExtResource("2_3x4k5")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MainContainer"]
layout_mode = 2

[node name="SpeedQueuePanel" type="PanelContainer" parent="HBoxContainer/MainContainer/HBoxContainer"]
custom_minimum_size = Vector2(900, 20)
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeedQueueContainer" type="VBoxContainer" parent="HBoxContainer/MainContainer/HBoxContainer/SpeedQueuePanel"]
layout_mode = 2

[node name="SpeedQueueTitle" type="Label" parent="HBoxContainer/MainContainer/HBoxContainer/SpeedQueuePanel/SpeedQueueContainer"]
layout_mode = 2
text = "速度队列"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedQueueBar" type="Control" parent="HBoxContainer/MainContainer/HBoxContainer/SpeedQueuePanel/SpeedQueueContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3

[node name="SpeedQueueBackground" type="ColorRect" parent="HBoxContainer/MainContainer/HBoxContainer/SpeedQueuePanel/SpeedQueueContainer/SpeedQueueBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.39607844, 0.101960786, 0.101960786, 0.8)

[node name="SpeedQueueTrack" type="ColorRect" parent="HBoxContainer/MainContainer/HBoxContainer/SpeedQueuePanel/SpeedQueueContainer/SpeedQueueBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.3, 0.5)

[node name="SpeedQueueFinishLine" type="ColorRect" parent="HBoxContainer/MainContainer/HBoxContainer/SpeedQueuePanel/SpeedQueueContainer/SpeedQueueBar"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
color = Color(1, 1, 0, 0.8)

[node name="CharacterNamesContainer" type="Control" parent="HBoxContainer/MainContainer/HBoxContainer/SpeedQueuePanel/SpeedQueueContainer/SpeedQueueBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer/MainContainer/HBoxContainer/SpeedQueuePanel/SpeedQueueContainer/SpeedQueueBar/CharacterNamesContainer"]
layout_mode = 0
offset_left = 7.0
offset_top = 20.0
offset_right = 71.0
offset_bottom = 43.0
text = "速度队列"

[node name="BattleSpeedPanel" type="PanelContainer" parent="HBoxContainer/MainContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3

[node name="BattleSpeedContainer" type="VBoxContainer" parent="HBoxContainer/MainContainer/HBoxContainer/BattleSpeedPanel"]
layout_mode = 2

[node name="BattleSpeedTitle" type="Label" parent="HBoxContainer/MainContainer/HBoxContainer/BattleSpeedPanel/BattleSpeedContainer"]
layout_mode = 2
text = "战斗倍速控制"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleSpeedControls" type="VBoxContainer" parent="HBoxContainer/MainContainer/HBoxContainer/BattleSpeedPanel/BattleSpeedContainer"]
layout_mode = 2

[node name="SpeedSlider" type="HSlider" parent="HBoxContainer/MainContainer/HBoxContainer/BattleSpeedPanel/BattleSpeedContainer/BattleSpeedControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 10.0
step = 0.5
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MainContainer/HBoxContainer/BattleSpeedPanel/BattleSpeedContainer"]
layout_mode = 2

[node name="SpeedInput" type="SpinBox" parent="HBoxContainer/MainContainer/HBoxContainer/BattleSpeedPanel/BattleSpeedContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 10.0
step = 0.5
value = 1.0

[node name="SpeedResetButton" type="Button" parent="HBoxContainer/MainContainer/HBoxContainer/BattleSpeedPanel/BattleSpeedContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "重置"

[node name="BattleLogPanel" type="PanelContainer" parent="HBoxContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BattleLogContainer" type="VBoxContainer" parent="HBoxContainer/MainContainer/BattleLogPanel"]
layout_mode = 2

[node name="BattleLogTitle" type="Label" parent="HBoxContainer/MainContainer/BattleLogPanel/BattleLogContainer"]
layout_mode = 2
text = "战斗日志"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleLogContent" type="RichTextLabel" parent="HBoxContainer/MainContainer/BattleLogPanel/BattleLogContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=white]战斗开始！[/color]
[color=yellow]玩家对野狼造成了15点伤害[/color]
[color=red]野狼对玩家造成了8点伤害[/color]
[color=green]玩家使用了治疗术，恢复了20点生命值[/color]"

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(700, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -31.5
offset_right = 150.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mhaon")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="战斗失败！" type="Label" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0, 0.11083345, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 0.7970939, 0.7633204, 1)
theme_override_constants/line_spacing = 5
theme_override_constants/paragraph_spacing = 5
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 64
text = "战斗失败！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="战斗胜利！" type="Label" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.81666666, 0, 1)
theme_override_colors/font_shadow_color = Color(0.61, 0.020333352, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_constants/paragraph_spacing = 5
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 64
text = "战斗胜利！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="逃跑成功！" type="Label" parent="PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8156863, 0, 1)
theme_override_colors/font_shadow_color = Color(2.5990605e-06, 0.35299248, 0.46467435, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_constants/paragraph_spacing = 5
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 64
text = "逃跑成功！"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="掉落物品" type="GridContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(600, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 20
columns = 5

[node name="武器" parent="PanelContainer/VBoxContainer/ScrollContainer/掉落物品" instance=ExtResource("3_mhaon")]
layout_mode = 2

[node name="武器2" parent="PanelContainer/VBoxContainer/ScrollContainer/掉落物品" instance=ExtResource("3_mhaon")]
layout_mode = 2

[node name="武器3" parent="PanelContainer/VBoxContainer/ScrollContainer/掉落物品" instance=ExtResource("3_mhaon")]
layout_mode = 2

[node name="武器4" parent="PanelContainer/VBoxContainer/ScrollContainer/掉落物品" instance=ExtResource("3_mhaon")]
layout_mode = 2

[node name="武器5" parent="PanelContainer/VBoxContainer/ScrollContainer/掉落物品" instance=ExtResource("3_mhaon")]
layout_mode = 2

[node name="武器6" parent="PanelContainer/VBoxContainer/ScrollContainer/掉落物品" instance=ExtResource("3_mhaon")]
layout_mode = 2

[node name="武器7" parent="PanelContainer/VBoxContainer/ScrollContainer/掉落物品" instance=ExtResource("3_mhaon")]
layout_mode = 2

[node name="武器8" parent="PanelContainer/VBoxContainer/ScrollContainer/掉落物品" instance=ExtResource("3_mhaon")]
layout_mode = 2

[node name="关闭弹窗" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "关闭弹窗"

[connection signal="pressed" from="PanelContainer/VBoxContainer/关闭弹窗" to="." method="_on_关闭弹窗_pressed"]
